<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"    tools:context=".Screens.Activities.ForgotPasswordActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/delius"
                android:gravity="center"
                android:text="@string/forgotpassword_title"
                android:textColor="@color/white"
                android:textSize="@dimen/common_title_size" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email_text"
                app:hintTextColor="@color/white"
                app:boxStrokeWidth="0.5dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/common_15_size"
                    android:drawableTint="@color/white"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_10_size"
                android:backgroundTint="@color/btn_background"
                android:fontFamily="@font/delius"
                android:paddingLeft="@dimen/common_30_size"
                android:paddingRight="@dimen/common_30_size"
                android:text="@string/reset_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_Recivelink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_20_size"
                android:fontFamily="@font/delius"
                android:text="@string/recive_link"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>